--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "mcarbajal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonschema": "^1.2.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
